0030570: Visualization, TKOpenGl - OpenGl_AspectFace ignores texture revision on recompute

Added revision check to one more branch within OpenGl_AspectsTextureSet::build().